// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel should render correctly 1`] = `
.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: transparent;
}

.c6>svg {
  width: 24px;
  height: 24px;
}

.c6 *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c4 {
  all: unset;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  left: 0;
  width: 56px;
  height: 100%;
  background-color: transparent;
}

.c4:hover>.c5,
.c4:active>.c5 {
  background-color: var(--admiral-color-Opacity_Modal, #0000009A);
}

.c7 {
  all: unset;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  right: 0;
  width: 56px;
  height: 100%;
  background-color: transparent;
}

.c7:hover>.c5,
.c7:active>.c5 {
  background-color: var(--admiral-color-Opacity_Modal, #0000009A);
}

.c13 {
  box-sizing: border-box;
  width: 12px;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 0.5px solid var(--admiral-color-Special_DarkStaticNeutral00, #C9CACD);
}

.c15 {
  box-sizing: border-box;
  width: 28px;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 0.5px solid var(--admiral-color-Special_DarkStaticNeutral00, #C9CACD);
}

.c11 {
  all: unset;
  display: block;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  width: 18px;
  height: 16px;
  padding: 7px 3px 6px 3px;
}

.c11:focus-visible>.c12 {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c14 {
  all: unset;
  display: block;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  width: 34px;
  height: 16px;
  padding: 7px 3px 6px 3px;
}

.c14:focus-visible>.c12 {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c8 {
  position: relative;
  display: flex;
  overflow-x: scroll;
  width: fit-content;
  overflow: -moz-scrollbars-none;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.c8::-webkit-scrollbar {
  width: 0!important;
  height: 0!important;
}

.c8 .c10,
.c8 .c12 {
  transition: width 0.3s ease-in-out;
}

.c3 {
  position: relative;
  display: flex;
  transition: all 300ms ease-in-out;
  transform: translateX(-100%);
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c3 >* {
  width: 100%;
  flex-shrink: 0;
  flex-grow: 1;
}

.c2 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  position: relative;
}

.c1 {
  display: flex;
  width: 100%;
  position: relative;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.c9 {
  align-self: center;
  margin-top: 10px;
  margin-bottom: 0;
  position: absolute;
  margin-top: 0;
  margin-bottom: 10px;
  bottom: 0;
}

<div
  class="c0"
  data-testid="testCarousel"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          aria-label="el0"
          data-index="0"
          data-testid="elem"
        >
          Item 0
        </div>
        <div
          aria-label="el1"
          data-index="1"
          data-testid="elem"
        >
          Item 1
        </div>
        <div
          aria-label="el2"
          data-index="2"
          data-testid="elem"
        >
          Item 2
        </div>
      </div>
    </div>
    <button
      class="c4"
    >
      <div
        class="c5 c6"
      >
        <div />
      </div>
    </button>
    <button
      class="c7"
    >
      <div
        class="c5 c6"
      >
        <div />
      </div>
    </button>
  </div>
  <div
    class="c8 c9"
  >
    <button
      aria-label="Item 0"
      class="c10 c11"
    >
      <div
        class="c12 c13"
      />
    </button>
    <button
      aria-label="Item 1"
      class="c10 c14"
    >
      <div
        class="c12 c15"
      />
    </button>
    <button
      aria-label="Item 2"
      class="c10 c11"
    >
      <div
        class="c12 c13"
      />
    </button>
  </div>
</div>
`;

exports[`Carousel should render correctly with primary appearance 1`] = `
.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background-color: transparent;
}

.c6>svg {
  width: 24px;
  height: 24px;
}

.c6 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral50, #74767B);
}

.c4 {
  all: unset;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  left: 0;
  width: 56px;
  height: 100%;
  background-color: transparent;
}

.c4:hover>.c5,
.c4:active>.c5 {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c7 {
  all: unset;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  right: 0;
  width: 56px;
  height: 100%;
  background-color: transparent;
}

.c7:hover>.c5,
.c7:active>.c5 {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

.c13 {
  box-sizing: border-box;
  width: 12px;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  border: none;
}

.c15 {
  box-sizing: border-box;
  width: 28px;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: none;
}

.c11 {
  all: unset;
  display: block;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  width: 18px;
  height: 16px;
  padding: 7px 3px 6px 3px;
}

.c11:focus-visible>.c12 {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c14 {
  all: unset;
  display: block;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  width: 34px;
  height: 16px;
  padding: 7px 3px 6px 3px;
}

.c14:focus-visible>.c12 {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c8 {
  position: relative;
  display: flex;
  overflow-x: scroll;
  width: fit-content;
  overflow: -moz-scrollbars-none;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.c8::-webkit-scrollbar {
  width: 0!important;
  height: 0!important;
}

.c8 .c10,
.c8 .c12 {
  transition: width 0.3s ease-in-out;
}

.c3 {
  position: relative;
  display: flex;
  transition: all 300ms ease-in-out;
  transform: translateX(-100%);
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c3 >* {
  width: 100%;
  flex-shrink: 0;
  flex-grow: 1;
}

.c2 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  position: relative;
}

.c1 {
  display: flex;
  width: 100%;
  position: relative;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.c9 {
  align-self: center;
  margin-top: 10px;
  margin-bottom: 0;
}

<div
  class="c0"
  data-testid="testCarousel"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          aria-label="el0"
          data-index="0"
          data-testid="elem"
        >
          Item 0
        </div>
        <div
          aria-label="el1"
          data-index="1"
          data-testid="elem"
        >
          Item 1
        </div>
        <div
          aria-label="el2"
          data-index="2"
          data-testid="elem"
        >
          Item 2
        </div>
      </div>
    </div>
    <button
      class="c4"
    >
      <div
        class="c5 c6"
      >
        <div />
      </div>
    </button>
    <button
      class="c7"
    >
      <div
        class="c5 c6"
      >
        <div />
      </div>
    </button>
  </div>
  <div
    class="c8 c9"
  >
    <button
      aria-label="Item 0"
      class="c10 c11"
    >
      <div
        class="c12 c13"
      />
    </button>
    <button
      aria-label="Item 1"
      class="c10 c14"
    >
      <div
        class="c12 c15"
      />
    </button>
    <button
      aria-label="Item 2"
      class="c10 c11"
    >
      <div
        class="c12 c13"
      />
    </button>
  </div>
</div>
`;

exports[`Carousel should render correctly without prev/next buttons 1`] = `
.c9 {
  box-sizing: border-box;
  width: 28px;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 0.5px solid var(--admiral-color-Special_DarkStaticNeutral00, #C9CACD);
}

.c11 {
  box-sizing: border-box;
  width: 12px;
  height: 4px;
  border-radius: 2px;
  background-color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 0.5px solid var(--admiral-color-Special_DarkStaticNeutral00, #C9CACD);
}

.c7 {
  all: unset;
  display: block;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  width: 34px;
  height: 16px;
  padding: 7px 3px 6px 3px;
}

.c7:focus-visible>.c8 {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c10 {
  all: unset;
  display: block;
  appearance: none;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  box-sizing: border-box;
  width: 18px;
  height: 16px;
  padding: 7px 3px 6px 3px;
}

.c10:focus-visible>.c8 {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c4 {
  position: relative;
  display: flex;
  overflow-x: scroll;
  width: fit-content;
  overflow: -moz-scrollbars-none;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.c4::-webkit-scrollbar {
  width: 0!important;
  height: 0!important;
}

.c4 .c6,
.c4 .c8 {
  transition: width 0.3s ease-in-out;
}

.c3 {
  position: relative;
  display: flex;
  transition: all 300ms ease-in-out;
  transform: translateX(-0%);
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.c3::-webkit-scrollbar {
  display: none;
}

.c3 >* {
  width: 100%;
  flex-shrink: 0;
  flex-grow: 1;
}

.c2 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  position: relative;
}

.c1 {
  display: flex;
  width: 100%;
  position: relative;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  display: flex;
  flex-direction: column;
}

.c5 {
  align-self: center;
  margin-top: 10px;
  margin-bottom: 0;
  position: absolute;
  margin-top: 0;
  margin-bottom: 10px;
  bottom: 0;
}

<div
  class="c0"
  data-testid="testCarousel"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          aria-label="el0"
          data-index="0"
          data-testid="elem"
        >
          Item 0
        </div>
        <div
          aria-label="el1"
          data-index="1"
          data-testid="elem"
        >
          Item 1
        </div>
        <div
          aria-label="el2"
          data-index="2"
          data-testid="elem"
        >
          Item 2
        </div>
      </div>
    </div>
  </div>
  <div
    class="c4 c5"
  >
    <button
      aria-label="Item 0"
      class="c6 c7"
    >
      <div
        class="c8 c9"
      />
    </button>
    <button
      aria-label="Item 1"
      class="c6 c10"
    >
      <div
        class="c8 c11"
      />
    </button>
    <button
      aria-label="Item 2"
      class="c6 c10"
    >
      <div
        class="c8 c11"
      />
    </button>
  </div>
</div>
`;
